packages/basemap/src/_geoslib.pyx

import sys
import numpy
cimport numpy as cnp

__version__ = "1.4.1"


# Need some Python C-API functions for strings.
cdef extern from "Python.h":
    object PyBytes_FromString(char *)


# Taken from `numpy.pxi` in numpy 1.0rc2.
cdef extern from "numpy/arrayobject.h":
    ctypedef int npy_intp
    ctypedef extern class numpy.ndarray [object PyArrayObject]:
        cdef char *data
        cdef int nd
        cdef npy_intp *dimensions
        cdef npy_intp *strides
        cdef object base
        cdef int flags
    npy_intp PyArray_SIZE(ndarray arr)
    npy_intp PyArray_ISCONTIGUOUS(ndarray arr)


# Initialize numpy.
cnp.import_array()


# GENERAL NOTES:
# - Remember to call initGEOS() before any use of this library's
#   functions, and call finishGEOS() when done.
# - Currently you have to explicitly GEOSGeom_destroy() all
#   GEOSGeom objects to avoid memory leaks, and to free()
#   all returned char * (unless const). This might change
#   before first release to ensure greater API stability.
cdef extern from "geos_c.h":
    # Supported geometry type IDs.
    cdef enum:
        GEOS_POINT
        GEOS_LINESTRING
        GEOS_LINEARRING
        GEOS_POLYGON
        GEOS_MULTIPOINT
        GEOS_MULTILINESTRING
        GEOS_MULTIPOLYGON
        GEOS_GEOMETRYCOLLECTION
        GEOS_VERSION_MAJOR
    ctypedef struct GEOSGeometry:
        pass
    ctypedef struct GEOSCoordSequence:
        pass
    # Cython 3: Next ctypedef needs "noexcept" declaration unless
    # the compiler directive "legacy_implicit_noexcept" is used
    # ("noexcept" syntax supported since Cython 0.29.31).
    ctypedef void (*GEOSMessageHandler)(const char *fmt, ...)
    char *GEOSversion()
    void initGEOS(GEOSMessageHandler notice_function, GEOSMessageHandler error_function)
    void finishGEOS()
    GEOSCoordSequence *GEOSCoordSeq_create(unsigned int size, unsigned int dims)
    void GEOSCoordSeq_destroy(GEOSCoordSequence* s)
    int GEOSCoordSeq_setX(GEOSCoordSequence* s, unsigned int idx, double val)
    int GEOSCoordSeq_setY(GEOSCoordSequence* s, unsigned int idx, double val)
    int GEOSCoordSeq_getX(GEOSCoordSequence* s, unsigned int idx, double *val)
    int GEOSCoordSeq_getY(GEOSCoordSequence* s, unsigned int idx, double *val)
    GEOSGeometry *GEOSUnion(GEOSGeometry* g1, GEOSGeometry* g2)
    GEOSGeometry *GEOSUnaryUnion(GEOSGeometry* g1)
    GEOSGeometry *GEOSEnvelope(GEOSGeometry* g1)
    GEOSGeometry *GEOSConvexHull(GEOSGeometry* g1)
    GEOSGeometry *GEOSGeom_createPoint(GEOSCoordSequence* s)
    GEOSGeometry *GEOSGeom_createLineString(GEOSCoordSequence* s)
    GEOSGeometry *GEOSGeom_createPolygon(GEOSGeometry* shell, GEOSGeometry** holes, unsigned int nholes)
    GEOSGeometry *GEOSGeom_createLinearRing(GEOSCoordSequence* s)
    void GEOSGeom_destroy(GEOSGeometry* g)
    # Topology operations: Return NULL on exception.
    GEOSGeometry *GEOSIntersection(GEOSGeometry* g1, GEOSGeometry* g2)
    GEOSGeometry *GEOSSimplify(GEOSGeometry* g1, double tolerance)
    GEOSGeometry *GEOSBuffer(GEOSGeometry* g1, double width, int quadsegs)
    GEOSGeometry *GEOSTopologyPreserveSimplify(GEOSGeometry* g1, double tolerance)
    # Binary/Unary predicate: Return 2 on exception, 1 on true, 0 on false.
    char GEOSIntersects(GEOSGeometry* g1, GEOSGeometry* g2)
    char GEOSWithin(GEOSGeometry* g1, GEOSGeometry* g2)
    char GEOSContains(GEOSGeometry* g1, GEOSGeometry* g2)
    char GEOSisEmpty(GEOSGeometry* g1)
    char GEOSisValid(GEOSGeometry* g1)
    char GEOSisSimple(GEOSGeometry* g1)
    char GEOSisRing(GEOSGeometry* g1)
    # Geometry info.
    char *GEOSGeomType(GEOSGeometry* g1)
    int GEOSGeomTypeId(GEOSGeometry* g1)
    # Functions: Return 0 on exception, 1 otherwise.
    int GEOSArea(GEOSGeometry* g1, double *area)
    int GEOSLength(GEOSGeometry* g1, double *length)
    # Returns -1 on error and 1 for non-multi geoms.
    int GEOSGetNumGeometries(GEOSGeometry* g1)
    # Return NULL on exception, Geometry must be a Collection.
    # Returned object is a pointer to internal storage:
    # it must NOT be destroyed directly.
    GEOSGeometry *GEOSGetGeometryN(GEOSGeometry* g, int n)
    int GEOSGetNumInteriorRings(GEOSGeometry* g1)
    # Return NULL on exception, Geometry must be a Polygon.
    # Returned object is a pointer to internal storage:
    # it must NOT be destroyed directly.
    GEOSGeometry *GEOSGetExteriorRing(GEOSGeometry* g)
    # Return NULL on exception.
    # Geometry must be a LineString, LinearRing or Point.
    GEOSCoordSequence *GEOSGeom_getCoordSeq(const GEOSGeometry* g)
    int GEOSCoordSeq_getSize(const GEOSCoordSequence *s, unsigned int *size)


# Cython 3: Next cdef needs "noexcept" declaration unless
# the compiler directive "legacy_implicit_noexcept" is used
# ("noexcept" syntax supported since Cython 0.29.31).
cdef void notice_h(const char *fmt, ...):
    pass
    #format = PyBytes_FromString(fmt)
    #message = PyBytes_FromString(msg)
    #try:
    #    warn_msg = format % message
    #except:
    #    warn_msg = format
    #sys.stdout.write('GEOS_NOTICE: %s\n' % warn_msg)


# Cython 3: Next cdef needs "noexcept" declaration unless
# the compiler directive "legacy_implicit_noexcept" is used
# ("noexcept" syntax supported since Cython 0.29.31).
# FIXME: The type should be: error_h(const char *fmt, ...), but
# Cython does not currently support varargs functions.
cdef void error_h(const char *fmt, char*msg):
    format = PyBytes_FromString(fmt)
    message = PyBytes_FromString(msg)
    try:
        warn_msg = format % message
    except:
        warn_msg = format
    sys.stderr.write('GEOS_ERROR: %s\n' % warn_msg)


# Check library version.
cdef geos_version():
    return PyBytes_FromString(GEOSversion())

# Module variables.
__geos_version__ = geos_version()
__geos_major_version__ = GEOS_VERSION_MAJOR


# Initialize GEOS (parameters are notice and error function callbacks).
initGEOS(notice_h, <GEOSMessageHandler>error_h)


cdef class BaseGeometry:

    cdef GEOSGeometry *_geom
    cdef unsigned int _npts
    cdef public object boundary

    def is_valid(self):
        cdef char valid
        valid = GEOSisValid(self._geom)
        if valid:
            return True
        else:
            return False

    def geom_type(self):
        return PyBytes_FromString(GEOSGeomType(self._geom))

    def within(self, BaseGeometry geom):
        cdef GEOSGeometry *g1
        cdef GEOSGeometry *g2
        cdef char answer
        g1 = self._geom
        g2 = geom._geom
        answer = GEOSWithin(g1, g2)
        if answer:
            return True
        else:
            return False

    def union(self, BaseGeometry geom):
        cdef GEOSGeometry *g1
        cdef GEOSGeometry *g2
        cdef GEOSGeometry *g3
        cdef const GEOSGeometry *gout
        cdef int numgeoms, i, typeid
        g1 = self._geom
        g2 = geom._geom
        g3 = GEOSUnion(g1, g2)
        typeid = GEOSGeomTypeId(g3)
        if typeid == GEOS_POLYGON:
            b = _get_coords(g3)
            p = Polygon(b)
        elif typeid == GEOS_LINESTRING:
            b = _get_coords(g3)
            p = LineString(b)
        # For multi-geom structures, just return first one.
        elif typeid == GEOS_MULTIPOLYGON:
            numgeoms = GEOSGetNumGeometries(g3)
            gout = GEOSGetGeometryN(g3, 0)
            b = _get_coords(gout)
            p = Polygon(b)
        elif typeid == GEOS_MULTILINESTRING:
            numgeoms = GEOSGetNumGeometries(g3)
            gout = GEOSGetGeometryN(g3, 0)
            b = _get_coords(gout)
            p = LineString(b)
        else:
            type = PyBytes_FromString(GEOSGeomType(g3))
            raise NotImplementedError("unions of type '%s' not yet implemented" % (type))
        GEOSGeom_destroy(g3)
        return p

    def simplify(self, tol):
        cdef GEOSGeometry *g1
        cdef GEOSGeometry *g3
        cdef const GEOSGeometry *gout
        cdef double tolerance
        cdef int numgeoms, i, typeid
        g1 = self._geom
        tolerance = tol
        g3 = GEOSSimplify(g1, tolerance)
        typeid = GEOSGeomTypeId(g3)
        if typeid == GEOS_POLYGON:
            b = _get_coords(g3)
            p = Polygon(b)
        elif typeid == GEOS_LINESTRING:
            b = _get_coords(g3)
            p = LineString(b)
        # For multi-geom structures, just return first one.
        elif typeid == GEOS_MULTIPOLYGON:
            numgeoms = GEOSGetNumGeometries(g3)
            gout = GEOSGetGeometryN(g3, 0)
            b = _get_coords(gout)
            p = Polygon(b)
        elif typeid == GEOS_MULTILINESTRING:
            numgeoms = GEOSGetNumGeometries(g3)
            gout = GEOSGetGeometryN(g3, 0)
            b = _get_coords(gout)
            p = LineString(b)
        else:
            type = PyBytes_FromString(GEOSGeomType(g3))
            raise NotImplementedError("intersections of type '%s' not yet implemented" % (type))
        GEOSGeom_destroy(g3)
        return p

    def fix(self):
        cdef GEOSGeometry *g1
        cdef GEOSGeometry *g3
        cdef const GEOSGeometry *gout
        cdef int numgeoms, i, typeid
        g1 = self._geom
        g3 = GEOSBuffer(g1, 0., 0)
        typeid = GEOSGeomTypeId(g3)
        if typeid == GEOS_POLYGON:
            b = _get_coords(g3)
            p = Polygon(b)
        elif typeid == GEOS_LINESTRING:
            b = _get_coords(g3)
            p = LineString(b)
        # For multi-geom structures, just return first one.
        elif typeid == GEOS_MULTIPOLYGON:
            numgeoms = GEOSGetNumGeometries(g3)
            gout = GEOSGetGeometryN(g3, 0)
            b = _get_coords(gout)
            p = Polygon(b)
        elif typeid == GEOS_MULTILINESTRING:
            numgeoms = GEOSGetNumGeometries(g3)
            gout = GEOSGetGeometryN(g3, 0)
            b = _get_coords(gout)
            p = LineString(b)
        else:
            type = PyBytes_FromString(GEOSGeomType(g3))
            raise NotImplementedError("intersections of type '%s' not yet implemented" % (type))
        GEOSGeom_destroy(g3)
        return p

    def intersects(self, BaseGeometry geom):
        cdef GEOSGeometry *g1
        cdef GEOSGeometry *g2
        cdef char answer
        g1 = self._geom
        g2 = geom._geom
        answer = GEOSIntersects(g1, g2)
        if answer:
            return True
        else:
            return False
